--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.5
   supabase_flutter: ^0.3.3
+  flutter_riverpod: ^2.0.2
 
 dev_dependencies:
   flutter_test:
