--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,13 +10,16 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.5
-  supabase_flutter: ^0.3.3
   flutter_riverpod: ^2.0.2
+  envied: ^0.2.3
+  firebase_core: ^2.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.1
+  envied_generator: ^0.2.3
+  build_runner: ^2.3.2
 
 flutter:
   uses-material-design: true
