--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   cupertino_icons: ^1.0.5
   flutter_riverpod: ^2.0.2
   firebase_core: ^2.1.0
+  firebase_auth: ^4.0.2
 
 dev_dependencies:
   flutter_test:
