alterações no form

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,9 @@ dependencies:
   flutter_riverpod: ^2.0.2
   firebase_core: ^2.1.0
   firebase_auth: ^4.0.2
+  currency_text_input_formatter: ^2.1.7
+  image_picker: ^0.8.6
+  flutter_hooks: ^0.18.5+1
 
 dev_dependencies:
   flutter_test:
