--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,13 +16,17 @@ dependencies:
   currency_text_input_formatter: ^2.1.7
   image_picker: ^0.8.6
   flutter_hooks: ^0.18.5+1
+  cloud_firestore: ^4.0.2
+  currency_formatter: ^2.0.0
+  firebase_storage: ^11.0.2
+  url_launcher: ^6.1.6
+#  path: ^1.8.2
+#  cross_file: ^0.3.3+2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.1
-  envied_generator: ^0.2.3
-  build_runner: ^2.3.2
 
 flutter:
   uses-material-design: true
