--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -10,17 +10,18 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Setup Flutter
-          uses: subosito/flutter-action@v1
-          with:
-            channel: "stable"
+        uses: subosito/flutter-action@v1
+        with:
+          channel: "stable"
 
-            - name: Install dependencies
-              run: flutter pub get
+      - name: Install dependencies
+        run: flutter pub get
 
-            - name: Build Web
-              run: flutter build web --release
-      - uses: FirebaseExtended/action-hosting-deploy@v0
-      - uses: Deploy to Firebase Hosting
+      - name: Build Web
+        run: flutter build web --release
+
+      - name: Deploy to Firebase Hosting
+        uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_ELAS_PROMOCOES }}'
