--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -18,7 +18,7 @@ jobs:
         run: flutter pub get
 
       - name: Build Web
-        run: flutter build web --web-renderer html --release
+        run: flutter build web --release
 
       - name: Deploy to Firebase Hosting
         uses: FirebaseExtended/action-hosting-deploy@v0
