--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   currency_formatter: ^2.0.0
   firebase_storage: ^11.0.2
   url_launcher: ^6.1.6
+  share_plus: ^6.0.1
 #  path: ^1.8.2
 #  cross_file: ^0.3.3+2
 
