--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,19 +10,18 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.5
-  flutter_riverpod: ^2.0.2
-  firebase_core: ^2.1.0
-  firebase_auth: ^4.0.2
-  currency_text_input_formatter: ^2.1.7
+  flutter_riverpod: ^2.1.1
+  firebase_core: ^2.1.1
+  firebase_auth: ^4.1.1
+  currency_text_input_formatter: ^2.1.8
   image_picker: ^0.8.6
   flutter_hooks: ^0.18.5+1
-  cloud_firestore: ^4.0.2
+  cloud_firestore: ^4.0.4
   currency_formatter: ^2.0.0
-  firebase_storage: ^11.0.2
+  firebase_storage: ^11.0.4
   url_launcher: ^6.1.6
-  share_plus: ^6.0.1
-#  path: ^1.8.2
-#  cross_file: ^0.3.3+2
+  share_plus: ^6.2.0
+  hooks_riverpod: ^2.1.1
 
 dev_dependencies:
   flutter_test:
