--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   url_launcher: ^6.1.6
   share_plus: ^6.2.0
   hooks_riverpod: ^2.1.1
+  fluro: ^2.0.3
 
 dev_dependencies:
   flutter_test:
