--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   share_plus: ^6.2.0
   hooks_riverpod: ^2.1.1
   go_router: ^5.1.5
+  device_preview: ^1.1.0
+  google_fonts: ^3.0.1
 
 dev_dependencies:
   flutter_test:
